replace sun.Base64 with apache common codec